2012-11-21  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/cpp.texi: Document __SANITIZE_ADDRESS__.

2012-11-21  H.J. Lu  <hongjiu.lu@intel.com>

	PR c/55397
	* cppbuiltin.c (define_builtin_macros_for_compilation_flags):
	Define __SANITIZE_ADDRESS__ for flag_asan.

2012-11-21  Wei Mi  <wmi@google.com>

	* common.opt: Change faddress-sanitizer to fsanitize=address.
	* toplev.c (process_options): Likewise.
	* gcc.c (LINK_COMMAND_SPEC): Likewise.
	* testsuite/lib/asan-dg.exp
	(check_effective_target_faddress_sanitizer): Likewise.
	(asan_init): Likewise.
	* doc/invoke.texi (-fsanitize=address): Document.

2012-11-17  H.J. Lu  <hongjiu.lu@intel.com>

	* common.opt (static-libasan): New option.
	* gcc.c (LIBASAN_SPEC): New macro.
	(LINK_COMMAND_SPEC): Replace -lasan with LIBASAN_SPEC.
	* doc/invoke.texi: Document -static-libasan.

2012-11-15  Jakub Jelinek  <jakub@redhat.com>

	* asan.c (report_error_func): Set DECL_IGNORED_P, don't touch
	DECL_ASSEMBLER_NAME.
	(asan_init_func): Likewise.
	(asan_finish_file): Use void * instead of __asan_global * as
	type of __asan_{,un}register_globals.  Set DECL_IGNORED_P on
	the decls.

2012-11-13  Jakub Jelinek  <jakub@redhat.com>

	* Makefile.in (asan.o): Depend on $(TM_P_H).

2012-11-12  Jakub Jelinek  <jakub@redhat.com>

	* asan.c (instrument_builtin_call) <case BUILT_IN_BCOPY>: Fix up
	dest assignment.

2012-11-12  David Edelsohn  <dje.gcc@gmail.com>

	* asan.c: Include tm_p.h

2012-11-12  Tobias Burnus  <burnus@net-b.de>

	* doc/invoke.texi: Move -faddress-sanitizer from Optimization
	Options to Debugging Options.

2012-11-12  Jakub Jelinek  <jakub@redhat.com>

	* asan.c: Formatting cleanups.

2012-11-12  Wei Mi  <wmi@google.com>

	* gcc.c (LINK_COMMAND_SPEC): Add -lasan to link command if
	-faddress-sanitizer is on.

2012-11-12  Dodji Seketeli  <dodji@redhat.com>

	* gimple.h (is_gimple_builtin_call): Declare ...
	* gimple.c (is_gimple_builtin_call): ... new public function.