@@ -1,4 +1,15 @@
-2013-06-05  Manjunath Matti <mmatti@caviumnetworks.com>
+2013-06-14  Manjunath Matti <mmatti@caviumnetworks.com>
+
+	Backported from mainline
+
+	2012-11-22  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gcc.c (ADD_STATIC_LIBASAN_LIBS): New macro.  Defined
+	with STATIC_LIBASAN_LIBS.
+	(LIBASAN_SPEC): Add STATIC_LIBASAN_LIBS.
+	* config/gnu-user.h (STATIC_LIBASAN_LIBS): New macro.
+
+2013-06-14  Manjunath Matti <mmatti@caviumnetworks.com>
 
 	Backported from mainline 
 	2012-11-21  Wei Mi  <wmi@google.com>
